# Pricetory

./: .gitignore  Benchmarks.md  CompilerOptimizationBM.md  LICENSE  Pricetory.cabal  Profile.md  Readme.md
DataGeneration/: RandomDataGenerator.hs
profiles/: client.hp  client.prof  server.hp  server.prof
scripts/: clean  clean.sh  eurusd.sh  make  prof_make
spikes/: ReadByteStringFromFile.hs
src/: '
src/Contract/: Constants.hs  Protocol.hs  RequestAckMessages.hs  Symbols.hs  Types.hs
src/Data/: Provider.hs  Sampler.hs
src/DataGeneration/: CmdArgs.hs  RandomDataGenerator.hs  RandomList.hs
src/Import/: SystemLog.hs
src/Network/: RandomRequestGenerator.hs  TCPClient.hs  TCPCommon.hs  TCPServer.hs
src/Utils/: Array.hs  GrowlNotifyHandler.hs  Random.hs
src/spikes/: CmdArgsSample.hs  GrowlNotifyLogger.hs  Logger.hs  WriteByteStringToFile.hs
